--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -3,7 +3,7 @@
 // Description:  Teach Me Html Template
 // Version: 1.0.0
 
-===============================================   
+===============================================
 STYLE SHEET INDEXING
 |
 |___ Fonts
@@ -465,6 +465,9 @@ Helpers
 -------------------------*/
 .color-primary {
   color: #2d74ba !important;
+}
+.color-primary-1 {
+  color: #041A71 !important;
 }
 
 .color-sec {
@@ -1470,6 +1473,24 @@ Elements
 .cus-arrow-btn:hover svg path {
   fill: #2d74ba;
   transition: all 0.5s ease-in-out;
+}
+
+/* CAMADA DE SLIDE DO CARROCEL */
+.overlay-blue {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #041A71;
+    opacity: 0.6; /* ajuste a transparência conforme quiser */
+    z-index: 1;
+}
+
+.carousel-caption,
+.carousel-caption .container-fluid {
+    /* position: relative; */
+    z-index: 9;
 }
 
 /*----------------------------------------*/
