--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1482,10 +1482,41 @@ Elements
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #041A71;
+  /* background: linear-gradient(to left, #041A71, #0A2C8B); */
     opacity: 0.6; /* ajuste a transparência conforme quiser */
     z-index: 1;
 }
+
+        .edit-1{
+            width: 50%;
+            position: absolute !important;
+            top: 45% !important;
+            left: 50% !important;
+            transform: translate(-50%, -50%) !important;
+            text-align: center !important;
+            color: white !important;
+            padding: 0 !important;
+        }
+        .edit-2{
+            width: 50%;
+            position: absolute !important;
+            top: 55% !important;
+            left: 50% !important;
+            transform: translate(-70%, -50%) !important;
+            text-align: start !important;
+            color: white !important;
+            padding: 0 !important;
+        }
+        .edit-3{
+            width: 50%;
+            position: absolute !important;
+            top: 45% !important;
+            left: 50% !important;
+            transform: translate(-50%, -50%) !important;
+            text-align: start !important;
+            color: white !important;
+            padding: 0 !important;
+        }
 
 .carousel-caption,
 .carousel-caption .container-fluid {
@@ -4246,7 +4277,7 @@ form .booking-card-5 input:focus-visible {
   transition: all 0.5s ease-in-out;
 }
 .vehicle-card .title {
-  font-size: 28px;
+  font-size: 18px;
   color: #040408;
   margin-bottom: 4px;
 }
@@ -4265,7 +4296,7 @@ form .booking-card-5 input:focus-visible {
 }
 .vehicle-card h5 {
   font-family: "metropolis";
-  font-size: clamp(16px, 1.198vw, 25px);
+  font-size: clamp(12px, 1.188vw, 18px);
   font-size: clamp;
   font-style: normal;
   font-weight: 600;
@@ -4280,6 +4311,7 @@ form .booking-card-5 input:focus-visible {
 }
 .vehicle-card .bottom-row h6 {
   color: #040408;
+  font-size: 18px;
 }
 .vehicle-card .bottom-row p {
   margin-bottom: 4px;
